--- a/index.html
+++ b/index.html
@@ -504,13 +504,15 @@
 
     </style>
 
+    <script src = "Config.cfg"></script>
+
     <script src = "JS/tmi.min.js"></script>
     <script src = "JS/TwitchBot.js"></script>
     <script src = "JS/Main.js"></script>
     <script src = "JS/AnimationAndStuff.js"></script>
     <script src = "JS/RequestHandler.js"></script>
     <script src = "JS/FileHandler.js"></script>
-	<script src = "JS/PopupMenu.js"></script>
+    <script src = "JS/PopupMenu.js"></script>
 	
   </head>
 
