--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         var token = localStorage.getItem('token');
         // api/user/me call have to be here...
 
-        var isPremium = true; // suppose we have this value
+        var isPremium = false; // suppose we have this value
 
         if (!isPremium) return;
 
@@ -106,6 +106,6 @@
       <div class = 'noticeItem'>View requests lists</div>
       <div class = 'noticeItem'>Ask for permision</div>
     </div>
-    
+
   </body>
 </html>
