--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
         border-width: 1px;
         padding: 10px;
         font-family: 'Raleway', sans-serif;
+        font-weight: bold;
       }
 
     </style>
