--- a/index.html
+++ b/index.html
@@ -100,12 +100,20 @@
       
       }
 
+      function viewListsRedirect() {
+        console.log('1');
+      }
+
+      function newPremiumRequest() {
+        console.log('2');
+      }
+
     </script>
     
     <div class = 'noticeBack'>
       <div class = 'noticeTitle'>What are you doing here?</div>
-      <div class = 'noticeItem'>View requests lists</div>
-      <div class = 'noticeItem'>Ask for permision</div>
+      <div class = 'noticeItem' onclick = 'viewListsRedirect'>Wanna view requests lists</div>
+      <div class = 'noticeItem' onclick = 'newPremiumRequest'>Wanna ask for permission</div>
     </div>
 
   </body>
