--- a/admin.html
+++ b/admin.html
@@ -339,7 +339,7 @@
 
       .dotButton {
         display: inline-block;
-        padding-left: 16;
+        padding-left: 16px;
         margin-right: 0;
         cursor: pointer;
         user-select: none;
