--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
     
     <div class = 'noticeBack'>
       <div class = 'noticeTitle'>What are you doing here?</div>
-      <div class = 'noticeItem' onclick = 'viewListsRedirect'>Wanna view requests lists</div>
-      <div class = 'noticeItem' onclick = 'newPremiumRequest'>Wanna ask for permission</div>
+      <div class = 'noticeItem' onclick = 'viewListsRedirect()'>Wanna view requests lists</div>
+      <div class = 'noticeItem' onclick = 'newPremiumRequest()'>Wanna ask for permission</div>
     </div>
 
   </body>
