--- a/view.html
+++ b/view.html
@@ -15,6 +15,7 @@
 
     <script src = "Config.cfg"></script>
 
+    <script src = "JS/TwitchBot.js"></script>
     <script src = "JS/Main.js"></script>
     <script src = "JS/RequestHandler.js"></script>
 	
@@ -24,7 +25,7 @@
 
     <div class = 'workspace'>
     
-    <div class = 'listsContainer'>
+        <div class = 'listsContainer'>
         <div class = 'listsOfChoices'>
 
             <div id = 'folListFull' class = 'listContainer'>
@@ -51,9 +52,24 @@
 
     </script>
 
-    <script> 
-      // init();
-      // loadState();  
+    <script>
+
+        // init
+
+        var tmp = loadSubIcons();
+        subIcons = tmp.subIcons;
+        subIconsMonths = tmp.months;
+
+        CHANNEL = 'Krabick';
+        MAX_CHOICE_LENGTH = 60;
+
+        // load data
+
+        // httpPost('api/user/me');
+
+        function callback(response) {
+
+        }
     </script>
     
   </body>
