--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
         border-style: none none solid none;
         border-width: 1px;
         padding: 10px;
+        padding-bottom: 20px;
         font-family: 'Raleway', sans-serif;
         font-weight: bold;
       }
