--- a/admin.html
+++ b/admin.html
@@ -624,7 +624,7 @@
 
     <script> 
       init();
-      loadState();  
+      loadStateLocalStorage(); // exchange later for loadState();  
     </script>
     
   </body>
