--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
       var isPremium = false; // suppose we have this value
 
-      if (!isPremium) window.open(ROOT_URL + '/crossroad.html');
+      if (!isPremium) window.location.replace(ROOT_URL + '/crossroad.html');
       
     </script>
     
