--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
       var isPremium = false; // suppose we have this value
 
+      var x = 4;
+      if (x > 5) x = 6;
       if (!isPremium) window.location.replace(ROOT_URL + '/crossroad.html');
       
     </script>
