--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
     <script>
 
-      const ROOT_URL  = 'msdfsf.github.io';
+      const ROOT_URL  = 'https://msdfsf.github.io';
 
       var token = localStorage.getItem('token');
       // api/user/me call have to be here...
