--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
       const ROOT_URL  = 'https://msdfsf.github.io';
 
-      var token = localStorage.getItem('token');
+      //var token = localStorage.getItem('token');
       // api/user/me call have to be here...
 
       var isPremium = false; // suppose we have this value
