--- a/view.html
+++ b/view.html
@@ -65,7 +65,7 @@
 
         // load data
 
-        // httpPost('api/user/me');
+        // httpPost('api/user/me', load);
 
         function callback(response) {
 
