--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
     
         <button id = "collectRequests" onclick = "changeCollectRequests()" class = "flatButton sidebarFullRow">Collect Requests</button>
         <button id = "addRecordTrigger" onclick = "displayAddRecord()" class = "flatButton addButton sidebarFullRow">Add Record</button>
-        <button id = "resetButton" onclick = "clearStorage();" class = "flatButton resetButton sidebarFullRow">Reset</button>
+        <button id = "resetButton" onclick = "clearList();" class = "flatButton resetButton sidebarFullRow">Reset</button>
 
       </div>
 
