--- a/index.html
+++ b/index.html
@@ -161,11 +161,11 @@
       }
 
       .sidebarActive {
-        left: 0px;
+        transform: translateX(0px);
       }
 
       .sidebarBehindActive {
-        left: -100px;
+        transform: translateX(-100px);
       }
 
       .sidebarFullRow {
