--- a/index.html
+++ b/index.html
@@ -134,9 +134,10 @@
         color: white;
         position: fixed;
         width: 250px;
-        left: -250px;
+        left: 0;
         height: 100%;
         top: 0;
+        transform: translateX(-250px);
         transition: all 500ms cubic-bezier(0.45, 1.5, 0.75, 1);
       }
 
