--- a/index.html
+++ b/index.html
@@ -11,7 +11,18 @@
 
       var token = getUrlParam('token');
       token = CryptoJS.AES.decrypt((token == null) ? '' : token, cfg.SECRET_KEY).toString();
-      // api/user/me call have to be here...
+
+      var tokenHeader = {};
+      tokenHeader.key = 'token';
+      tokenHeader.value = token;
+
+      httpPost('api/user/me', userInfoCallback, [tokenHeader]);
+
+      function userInfoCallback(response) {
+
+        console.log(response);
+      
+      }
 
       var isPremium = true; // suppose we have this value
 
