--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       tokenHeader.key = 'token';
       tokenHeader.value = token;
 
-      httpPost('api/user/me', userInfoCallback, [tokenHeader]);
+      httpGet('api/user/me', userInfoCallback, [tokenHeader]);
 
       function userInfoCallback(response) {
 
